--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -5,20 +5,20 @@
     <input type="text" />
   </div>
   <div>
-    <Address>Email Address</Address>
+    <small>Email Address</small>
     <input type="text" />
   </div>
   <div>
     <small>Phone Number</small>
-    <input type="number"/>
+    <input type="number" />
   </div>
   <div>
     <small>Password</small>
-    <input type="text"/>
+    <input type="text" />
   </div>
   <div>
     <small>confirm Password</small>
-    <input type="text"/>
+    <input type="text" />
   </div>
   <span></span>
   <button>Create Account</button>
