--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -2,4 +2,5 @@
     <div id="left-ellipse"></div>
   <div id="right-button-card"></div>
   <app-sign-up></app-sign-up>
+  <!-- <app-login></app-login> -->
 </main>
