--- a/src/app/sass/_variables.scss
+++ b/src/app/sass/_variables.scss
@@ -15,6 +15,7 @@ $line-color: #B7C4C4;
 $gill-san:"Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
 sans-serif;
 $text-link-color:#3275F6;
+$placeholder-color: #B2AAAA
 
 
 
